--- a/setup.cfg
+++ b/setup.cfg
@@ -1,31 +1,48 @@
 [metadata]
 name = hdlopt
 version = attr: hdlopt.__version__
-author = Your Name
-author_email = your.email@example.com
-description = Comprehensive HDL optimization and analysis toolset
+author = Uzair Gheewala
+author_email = uzairgheewala474@gmail.com
+description = Comprehensive HDL Design Analysis Tool
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/yourusername/hdlopt
+url = https://github.com/uzairgheewala/hdlopt
+license = Apache License 2.0
 classifiers =
-    Programming Language :: Python :: 3
+    Development Status :: 3 - Alpha
+    Intended Audience :: Developers
+    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
+    License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
-    License :: OSI Approved :: Apache Software License
-    Operating System :: OS Independent
-    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
 
 [options]
 packages = find:
 python_requires = >=3.8
 install_requires =
-    numpy>=1.19.0
-    matplotlib>=3.3.0
-    pandas>=1.2.0
-    # Add other dependencies
+    pyvips
+    fusesoc
+    jinja2
+    ply
+    pyverilog
+    numpy
+    pandas
+    matplotlib
+    deap
+    cocotb
+    simpy
+    vunit-hdl
+    networkx
+    pyreadline3
+    ipython-genutils
+    reportlab
+    pymupdf
+    pyvcd
+    graphviz
+    vcd
+    tenacity
 
-[options.packages.find]
-exclude =
-    tests*
-    docs*
+[options.entry_points]
+console_scripts =
+    hdlopt = hdlopt.runner:run
