--- a/.github/workflows/module-setup.yml
+++ b/.github/workflows/module-setup.yml
@@ -4,28 +4,37 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch: # Allows manual triggering
+
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
 
 jobs:
   setup-directories:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-          
+          python-version: "3.10"
+
       - name: Create Module Directories
         run: python .github/scripts/setup_modules.py
-        
+
       - name: Check for Changes
         id: git-check
         run: |
           git add modules/
           git status --porcelain | grep "modules/" || echo "No changes"
-          
+
       - name: Commit Directory Structure
         if: steps.git-check.outputs.stdout != 'No changes'
         run: |
