--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -9,8 +9,16 @@ on:
 jobs:
   update-status:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.WIKI_ACCESS_TOKEN }} # Add this line
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,6 +30,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install numpy pandas matplotlib PyGithub
           pip install -r requirements.txt
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Update module status
         run: python .github/scripts/update_status.py
