--- a/setup.cfg
+++ b/setup.cfg
@@ -46,3 +46,8 @@ install_requires =
 [options.entry_points]
 console_scripts =
     hdlopt = hdlopt.runner:run
+
+[tool.pytest]
+testpaths = ["hdlopt/tests"]
+python_files = ["test_*.py"]
+addopts = "-v --cov=hdlopt"
