--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description = Comprehensive HDL Design Analysis Tool
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/uzairgheewala/hdlopt
-license = Apache License 2.0
+license_file = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
