--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,14 @@
+# Project identification
 sonar.projectKey=uzairgheewala_HDLOpt
 sonar.organization=uzairgheewala
-sonar.sources=.
+
+# Source code location
+sonar.sources=hdlopt
+sonar.tests=hdlopt/tests
+
+# Python specific settings
+sonar.python.version=3.10
 sonar.python.coverage.reportPaths=coverage.xml
+
+# Disable automatic analysis
+sonar.alm.github.actionAnalysis.disabled=true
