--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -52,11 +52,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.WIKI_ACCESS_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
+
         with:
           # Disable automatic analysis
           args: >
             -Dsonar.projectKey=uzairgheewala_HDLOpt
-            -Dsonar.organization=your-organization
+            -Dsonar.organization=uzairgheewala
             -Dsonar.sources=.
             -Dsonar.tests=hdlopt/tests
             -Dsonar.python.coverage.reportPaths=coverage.xml
