--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -54,22 +54,22 @@ jobs:
           java-version: "17" # Use Java 17
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v1
+        run: |
+          export JAVA_HOME="${JAVA_HOME_17_X64}"
+          export PATH="$JAVA_HOME/bin:$PATH"
+          sonar-scanner \
+            -Dsonar.projectKey=uzairgheewala_HDLOpt \
+            -Dsonar.organization=uzairgheewala \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.sources=. \
+            -Dsonar.tests=hdlopt/tests \
+            -Dsonar.python.coverage.reportPaths=coverage.xml \
+            -Dsonar.verbose=true \
+            -Dsonar.qualitygate.wait=true
         env:
           GITHUB_TOKEN: ${{ secrets.WIKI_ACCESS_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
-
-        with:
-          # Disable automatic analysis
-          args: >
-            -Dsonar.projectKey=uzairgheewala_HDLOpt
-            -Dsonar.organization=uzairgheewala
-            -Dsonar.sources=.
-            -Dsonar.tests=hdlopt/tests
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.verbose=true
-            -Dsonar.qualitygate.wait=true
 
       - name: Upload reports
         if: always()
