--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -53,10 +53,18 @@ jobs:
           distribution: "temurin" # Eclipse Temurin distribution
           java-version: "17" # Use Java 17
 
-      - name: SonarCloud Scan
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Setup SonarCloud Scanner
+        uses: warchant/setup-sonar-scanner@v7
+
+      - name: Run SonarCloud Analysis
         run: |
-          export JAVA_HOME="${JAVA_HOME_17_X64}"
-          export PATH="$JAVA_HOME/bin:$PATH"
           sonar-scanner \
             -Dsonar.projectKey=uzairgheewala_HDLOpt \
             -Dsonar.organization=uzairgheewala \
