Sonar + Updated tests for workflow where modelsim n/a

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,5 @@ sonar.python.coverage.reportPaths=coverage.xml
 
 # Disable automatic analysis
 sonar.alm.github.actionAnalysis.disabled=true
+sonar.alm.github.app.enabled=false
+sonar.alm.github.app.privateKey.secured=false
