Sonar + Maybe fix yosys?

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,10 @@ sonar.tests=hdlopt/tests
 sonar.python.version=3.10
 sonar.python.coverage.reportPaths=coverage.xml
 
-# Disable automatic analysis
+# Disable ALL automatic analysis
 sonar.alm.github.actionAnalysis.disabled=true
 sonar.alm.github.app.enabled=false
 sonar.alm.github.app.privateKey.secured=false
+sonar.pullrequest.provider=none
+sonar.github.enabled=false
+sonar.github.app.enabled=false
