--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.organization=uzairgheewala
 # Source code location
 sonar.sources=hdlopt
 sonar.tests=hdlopt/tests
+sonar.exclusions=hdlopt/tests/**/*
 
 # Python specific settings
 sonar.python.version=3.10
