--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,16 +62,29 @@ jobs:
           Start-Process -FilePath "C:\oss-cad-suite.exe" -Wait
 
           # Setup OSS CAD Suite environment
-          cmd.exe /c "call C:\oss-cad-suite\environment.bat && set > env.txt"
-          Get-Content env.txt | ForEach-Object {
-              $name, $value = $_.split('=')
-              if ($name -and $value) {
-                  echo "$name=$value" >> $env:GITHUB_ENV
+          cmd.exe /c "call C:\oss-cad-suite\environment.bat && set > %CD%\env.txt"
+
+          # Read and set environment variables if file exists
+          if (Test-Path "env.txt") {
+              Get-Content "env.txt" | ForEach-Object {
+                  $name, $value = $_.split('=')
+                  if ($name -and $value) {
+                      echo "$name=$value" >> $env:GITHUB_ENV
+                  }
               }
+          } else {
+              echo "Environment file not created - manual PATH setup"
+              echo "C:\oss-cad-suite\bin" >> $env:GITHUB_PATH
           }
 
+          # Add fallback PATH update
+          $env:Path = "C:\oss-cad-suite\bin;$env:Path"
+
           # Verify installation
-          yosys --version
+          Write-Host "Verifying Yosys installation..."
+          Write-Host "Current PATH: $env:Path"
+          cmd.exe /c "where yosys.exe"
+          cmd.exe /c "yosys --version"
 
       - name: Code Quality
         continue-on-error: true # Add this line to continue even if pylint fails
