--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hdlopt
-version = attr: hdlopt.__version__
+version = 0.1.0
 author = Uzair Gheewala
 author_email = uzairgheewala474@gmail.com
 description = Comprehensive HDL Design Analysis Tool
